tests/rosetta/out/Fortran/call-a-foreign-language-function.error
gfortran: exit status 1
/tmp/call-a-foreign-language-function.f90:6:3:

    6 |   main()
      |   1
Error: Unclassifiable statement at (1)
/tmp/call-a-foreign-language-function.f90:15:9:

   15 |     c2 = strdup(go1)
      |         1
Error: Cannot convert CHARACTER(100) to INTEGER(4) at (1)
